test/samples/invalid/macro.bad_fun_arg_type.invalid.sol
/// #macro foo();
contract Foo {
	function foo(uint x, int8 y) public {}
}
